# dbsync-client/generated/api/openapi.yaml
@@ -6,6 +6,33 @@ servers:
 - description: Default Server URL
   url: http://localhost:8080/
 paths:
+  /cardanoDbSyncApi/lastMint:
+    post:
+      operationId: getLastMint
+      requestBody:
+        content:
+          application/json:
+            example:
+              stakeAddress: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
+              policyIds:
+              - 38e97ac082af9312c69c9e2b0949c0d7873f0bbca34b0a8905ec2441
+            schema:
+              $ref: '#/components/schemas/GetLastMintRequest'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/TokenDetails'
+                type: array
+          description: OK
+      summary: Get last minted tokens for stakeAddress and policy ids
+      tags:
+      - rest-handler
+      x-content-type: application/json
+      x-accepts: application/json
   /cardanoDbSyncApi/{stakeAddress}/stakeInfo:
     get:
       operationId: getStakeInfo
@@ -50,6 +77,31 @@ paths:
           description: OK
       summary: "Find the first known address with the same stake address, which should\
         \ not be mangled"
+      tags:
+      - rest-handler
+      x-accepts: application/json
+  /cardanoDbSyncApi/{stakeAddress}/handles:
+    get:
+      operationId: getHandles
+      parameters:
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
+        explode: false
+        in: path
+        name: stakeAddress
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/StakeAddress'
+                type: array
+          description: OK
+      summary: Get all handles from a stakeAddress
       tags:
       - rest-handler
       x-accepts: application/json
@@ -151,6 +203,29 @@ paths:
       tags:
       - rest-handler
       x-accepts: application/json
+  /cardanoDbSyncApi/transaction/{txId}/confirmed:
+    get:
+      operationId: isTransactionConfirmed
+      parameters:
+      - example: a6ca444bd39cb51c7e997a9cead4a8071e2f7e5d1579ac4194b6aaaba923bc58
+        explode: false
+        in: path
+        name: txId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: boolean
+          description: OK
+      summary: Checks is a txid has been included in the chain
+      tags:
+      - rest-handler
+      x-accepts: application/json
   /cardanoDbSyncApi/token:
     get:
       operationId: getTokenList
@@ -223,6 +298,67 @@ paths:
       tags:
       - rest-handler
       x-accepts: application/json
+  /cardanoDbSyncApi/tip:
+    get:
+      operationId: getTip
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                format: int64
+                type: integer
+          description: OK
+      summary: Returns current tip of db
+      tags:
+      - rest-handler
+      x-accepts: application/json
+  /cardanoDbSyncApi/stakeHash/{stakeAddress}:
+    get:
+      operationId: getStakeHashByAddress
+      parameters:
+      - example: stake1u8wmu7jc0e4a6fn5haflczfjy6aagwhsxh6w5p7hsyt8jeshhy0rn
+        explode: false
+        in: path
+        name: stakeAddress
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StakeAddress'
+          description: OK
+      summary: Find stakeAddressHash by stakeAddress
+      tags:
+      - rest-handler
+      x-accepts: application/json
+  /cardanoDbSyncApi/stakeAddress/{stakeAddressHash}:
+    get:
+      operationId: getStakeAddressByHash
+      parameters:
+      - example: e1ddbe7a587e6bdd2674bf53fc093226bbd43af035f4ea07d781167966
+        explode: false
+        in: path
+        name: stakeAddressHash
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StakeAddress'
+          description: OK
+      summary: Find stakeAddress by stakeAddressHash
+      tags:
+      - rest-handler
+      x-accepts: application/json
   /cardanoDbSyncApi/poolList:
     get:
       operationId: getPoolList
@@ -264,6 +400,29 @@ paths:
       tags:
       - rest-handler
       x-accepts: application/json
+  /cardanoDbSyncApi/handles/{handle}:
+    get:
+      operationId: getAddressByHandle
+      parameters:
+      - example: petergrossmann
+        explode: false
+        in: path
+        name: handle
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StakeAddress'
+          description: OK
+      summary: Get address for handle
+      tags:
+      - rest-handler
+      x-accepts: application/json
   /cardanoDbSyncApi/epochStake/{poolHash}/{epoch}:
     get:
       operationId: getEpochStake
@@ -300,6 +459,58 @@ paths:
       x-accepts: application/json
 components:
   schemas:
+    GetLastMintRequest:
+      example:
+        stakeAddress: stakeAddress
+        policyIds:
+        - policyIds
+        - policyIds
+      properties:
+        stakeAddress:
+          type: string
+        policyIds:
+          items:
+            type: string
+          type: array
+      type: object
+    TokenDetails:
+      example:
+        metadata: metadata
+        maName: maName
+        totalSupply: 6
+        maPolicyId: maPolicyId
+        fingerprint: fingerprint
+        slotNo: 0
+        txHash: txHash
+        maPolicyScript: maPolicyScript
+      properties:
+        slotNo:
+          format: int64
+          type: integer
+        maPolicyId:
+          type: string
+        maName:
+          type: string
+        fingerprint:
+          type: string
+        metadata:
+          type: string
+        maPolicyScript:
+          type: string
+        txHash:
+          type: string
+        totalSupply:
+          format: int64
+          type: integer
+      required:
+      - fingerprint
+      - maName
+      - maPolicyId
+      - maPolicyScript
+      - slotNo
+      - totalSupply
+      - txHash
+      type: object
     StakeInfo:
       example:
         stake: 0
@@ -330,8 +541,16 @@ components:
         address:
           type: string
       type: object
+    StakeAddress:
+      example:
+        address: address
+      properties:
+        address:
+          type: string
+      type: object
     Utxo:
       example:
+        owningAddress: owningAddress
         maName: maName
         sourceAddress: sourceAddress
         maPolicyId: maPolicyId
@@ -351,9 +570,12 @@ components:
         value:
           format: int64
           type: integer
+        owningAddress:
+          type: string
         sourceAddress:
           type: string
       required:
+      - owningAddress
       - sourceAddress
       - txHash
       - txIndex
@@ -453,51 +675,6 @@ components:
       - timestamp
       - txHash
       - withdrawn
-      type: object
-    StakeAddress:
-      example:
-        address: address
-      properties:
-        address:
-          type: string
-      type: object
-    TokenDetails:
-      example:
-        metadata: metadata
-        maName: maName
-        totalSupply: 6
-        maPolicyId: maPolicyId
-        fingerprint: fingerprint
-        slotNo: 0
-        txHash: txHash
-        maPolicyScript: maPolicyScript
-      properties:
-        slotNo:
-          format: int64
-          type: integer
-        maPolicyId:
-          type: string
-        maName:
-          type: string
-        fingerprint:
-          type: string
-        metadata:
-          type: string
-        maPolicyScript:
-          type: string
-        txHash:
-          type: string
-        totalSupply:
-          format: int64
-          type: integer
-      required:
-      - fingerprint
-      - maName
-      - maPolicyId
-      - maPolicyScript
-      - slotNo
-      - totalSupply
-      - txHash
       type: object
     PoolInfo:
       example:
